# csv-adapter

./: .env.example  .gitignore  .gitmodules  AGENT.md  Cargo.toml  INDEXER_STRATEGY.md  README.md  REFACTOR_SUMMARY.md  SESSION_SUMMARY.md  TEST_RESULTS.md  WALLET_INDEXER_INTEGRATION.md  aptos.txt.pub  refactor.md  repomix-output.xml  task_progress.md
csv-adapter/: Cargo.toml  README.md
csv-adapter-aptos/: .aptos-config-temp.yaml  Cargo.toml  NATIVE_SDK_COMPLIANCE.md  README.md  build.rs
csv-adapter-aptos/contracts/: Move.toml  csv_seal.move
csv-adapter-aptos/scripts/: deploy-output-testnet.txt  deploy.sh  deploy_testnet.sh
csv-adapter-aptos/src/: adapter.rs  chain_adapter_impl.rs  chain_operations.rs  checkpoint.rs  deploy.rs  error.rs  lib.rs  merkle.rs  proofs.rs  real_rpc.rs  rpc.rs  seal.rs
csv-adapter-aptos/tests/: aptos_testnet_real_e2e.rs
csv-adapter-bitcoin/: Cargo.toml  NATIVE_SDK_COMPLIANCE.md  README.md
csv-adapter-bitcoin/examples/: signet_fixed_seed.rs  signet_funding_addr.rs  signet_real_tx_demo.rs
csv-adapter-bitcoin/src/: adapter.rs  bip341.rs  chain_adapter_impl.rs  chain_operations.rs  deploy.rs  error.rs  lib.rs  mempool_rpc.rs  proofs.rs  proofs_new.rs  real_rpc.rs  rpc.rs  seal.rs  signatures.rs  tapret.rs  testnet_deploy.rs  tx_builder.rs  types.rs  wallet.rs
csv-adapter-bitcoin/tests/: integration.rs  signet_e2e.rs  signet_integration.rs  signet_real_e2e.rs  signet_real_tx.rs
csv-adapter-core/: Cargo.toml  README.md  build.rs
csv-adapter-core/examples/: basic_right.rs  commitment_chain.rs  custom_chain_adapter.rs
csv-adapter-core/src/: adapter_factory.rs  advanced_commitments.rs  agent_types.rs  chain_adapter.rs  chain_config.rs  chain_discovery.rs  chain_operations.rs  chain_plugin.rs  chain_registry.rs  chain_registry_fixed.rs  chain_system.rs  client.rs  commitment.rs  commitment_chain.rs  consignment.rs  cross_chain.rs  dag.rs  error.rs  events.rs  genesis.rs  hash.rs  interface.rs  lib.rs  mpc.rs  performance.rs  proof.rs  protocol_version.rs  rgb_compat.rs  right.rs  schema.rs  seal.rs  seal_registry.rs  signature.rs  state_store.rs  store.rs  tagged_hash.rs  tapret_verify.rs  transition.rs  validator.rs
csv-adapter-core/tests/: chain_system_tests.rs  factory_pattern_tests.rs  property_tests.rs  security_hardening.rs
csv-adapter-ethereum/: Cargo.toml  NATIVE_SDK_COMPLIANCE.md  README.md  build.rs
csv-adapter-ethereum/src/: adapter.rs  chain_adapter_impl.rs  chain_operations.rs  deploy.rs  error.rs  finality.rs  lib.rs  mpt.rs  proofs.rs  real_rpc.rs  rpc.rs  seal.rs  seal_contract.rs
csv-adapter-keystore/: Cargo.toml
csv-adapter-keystore/src/: bip39.rs  bip44.rs  browser_keystore.rs  keystore.rs  lib.rs  memory.rs
csv-adapter-keystore/tests/: memory_security_tests.rs  security_tests.rs
csv-adapter-solana/: Cargo.toml  NATIVE_SDK_COMPLIANCE.md  build.rs
csv-adapter-solana/scripts/: deploy-devnet.json
csv-adapter-solana/src/: adapter.rs  chain_adapter_impl.rs  chain_operations.rs  config.rs  deploy.rs  error.rs  lib.rs  mint.rs  program.rs  rpc.rs  seal.rs  types.rs  wallet.rs
csv-adapter-store/: Cargo.toml  README.md
csv-adapter-store/src/: browser_storage.rs  lib.rs  unified.rs
csv-adapter-sui/: Cargo.toml  NATIVE_SDK_COMPLIANCE.md  README.md  SUI_SDK_CONFLICT_TRACKING.md  build.rs
csv-adapter-sui/contracts/: Published.toml
csv-adapter-sui/scripts/: deploy.sh
csv-adapter-sui/src/: adapter.rs  chain_adapter_impl.rs  chain_operations.rs  config.rs  deploy.rs  error.rs  lib.rs  mint.rs  proofs.rs  real_rpc.rs  rpc.rs  seal.rs
csv-adapter-sui/tests/: sui_testnet_real_e2e.rs  testnet_e2e.rs
csv-adapter/src/: builder.rs  client.rs  config.rs  cross_chain.rs  deploy.rs  errors.rs  events.rs  facade.rs  lib.rs  prelude.rs  proofs.rs  rights.rs  scalable_builder.rs  scalable_builder_v2.rs  transfers.rs  wallet.rs
csv-adapter/tests/: facade_security_tests.rs  testnet_integration_tests.rs
csv-aptos/: Cargo.toml
csv-aptos/src/: backend.rs  chain_operations.rs  checkpoint.rs  deploy.rs  error.rs  lib.rs  merkle.rs  node.rs  ops.rs  proofs.rs  rpc.rs  seal.rs  seal_protocol.rs  signatures.rs  verifier.rs
csv-celestia/: Cargo.toml
csv-celestia/src/: blob.rs  client.rs  commitment.rs  da_layer.rs  error.rs  ipfs.rs  lib.rs  metadata.rs  namespace.rs  node.rs  proof_id.rs  rpc.rs  seal_protocol.rs  types.rs
csv-cli/: Cargo.toml
csv-cli/src/: chain_registry.rs  config.rs  encrypt.rs  keystore_migration.rs  main.rs  output.rs  state.rs
csv-cli/tests/: check_aptos_addr.rs  config_integration_tests.rs  cross_chain_e2e.rs
csv-core/: Cargo.toml
csv-core/examples/: basic_sanad.rs  custom_chain_adapter.rs
csv-core/fuzz/: Cargo.toml
csv-core/src/: atomic_swap.rs  backend.rs  chain_config.rs  client.rs  collections.rs  commit_mux.rs  commitment.rs  commitment_chain.rs  commitments_ext.rs  cross_chain.rs  dag.rs  domain_hash.rs  driver.rs  driver_registry.rs  error.rs  events.rs  genesis.rs  lib.rs  mcp.rs  nullifier.rs  ops.rs  performance.rs  proof.rs  proof_pipeline.rs  protocol_version.rs  recovery_engine.rs  replay_registry.rs  rgb.rs  sanad.rs  schema.rs  seal.rs  signature.rs  state_store.rs  stealth.rs  store.rs  transition.rs  validator.rs  verifier.rs  zk_proof.rs
csv-core/tests/: security_hardening.rs
csv-ethereum/: Cargo.toml
csv-ethereum/scripts/: deploy-sepolia.sh
csv-ethereum/src/: backend.rs  chain_operations.rs  config.rs  contract_bytecode.rs  deploy.rs  error.rs  finality.rs  lib.rs  mpt.rs  node.rs  ops.rs  proofs.rs  rpc.rs  sanad_contract.rs  seal.rs  seal_protocol.rs  signatures.rs  verifier.rs  zk_verifier.rs
csv-explorer/: .pids  Cargo.toml  REALTIME_ACTIVITY.md  build-ui.sh  config.example.toml  repomix-output.xml  serve-ui.sh  start.sh
csv-explorer/api/: Cargo.toml
csv-explorer/data/: explorer.db  testnet.db
csv-observability/: Cargo.toml
csv-p2p/: Cargo.toml
csv-sdk/: Cargo.toml
csv-stark/: Cargo.toml
csv-store/: Cargo.toml
csv-sui/: Cargo.toml
csv-wallet/: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  TEST_PLAN.md
fuzz/: Cargo.toml
(+661 files in other folders)
