[workspace]
members = [
    "csv-core",
    "csv-bitcoin",
    "csv-celestia",
    "csv-ethereum",
    "csv-sui",
    "csv-aptos",
    "csv-solana",
    "csv-store",
    "csv-keys",
    "csv-sdk",
    "csv-cli",
    "csv-wallet",
    "csv-p2p",
    "csv-stark",
    "csv-observability",
    "fuzz",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
authors = ["Amin Razavi, ALL FREE LLMs"]
repository = "https://github.com/client-side-validation/csv-protocol"
homepage = "https://github.com/client-side-validation/csv-protocol"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.95"

[workspace.dependencies]
parking_lot = "0.12"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.8", features = ["parse"] }
# Force aws-lc-sys >= 0.39 to fix RUSTSEC-2026-0044 and RUSTSEC-2026-0048
aws-lc-sys = "0.39"

csv-core = { path = "csv-core" }
csv-keys = { path = "csv-keys" }
csv-store = { path = "csv-store" }

# csv-explorer dependencies
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
async-trait = "0.1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
lazy_static = "1.4"
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
sha3 = "0.10"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
config = "0.14"

# Crypto & security
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
aes-gcm = "0.10"
scrypt = { version = "0.11", default-features = false }
bip39 = { version = "2.0", features = ["rand"] }
zeroize = { version = "1.7", features = ["derive"] }

# Web & WASM
web-sys = { version = "0.3", features = ["Storage", "Window"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = "0.2"
dioxus = "0.5"
dioxus-web = "0.5"
dioxus-desktop = "0.5"

[workspace.lints.rust]
missing_docs = "warn"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"

[workspace.lints.clippy]
needless_borrows_for_generic_args = "allow"