[package]
name = "csv-adapter"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "csv-core",
    "csv-bitcoin",
    "csv-ethereum",
    "csv-solana",
    "csv-sui",
    "csv-aptos",
    "csv-celestia",
    "csv-sdk",
    "csv-cli",
    "csv-wallet",
    "csv-keys",
    "csv-store",
    "csv-p2p",
    "csv-observability",
    "csv-explorer/api",
    "csv-explorer/shared",
    "csv-explorer/storage",
    "csv-explorer/indexer",
    "csv-stark",
    "csv-mcp-server",
    "typescript-sdk/wasm",
    "xtask",
    "fuzz",
]

[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/csv-protocol/csv-adapter"

[workspace.dependencies]
# Core
csv-core = { path = "csv-core" }

# Chain adapters
csv-bitcoin = { path = "csv-bitcoin" }
csv-ethereum = { path = "csv-ethereum" }
csv-solana = { path = "csv-solana" }
csv-sui = { path = "csv-sui" }
csv-aptos = { path = "csv-aptos" }
csv-celestia = { path = "csv-celestia" }

# SDK and tooling
csv-sdk = { path = "csv-sdk" }
csv-cli = { path = "csv-cli" }
csv-wallet = { path = "csv-wallet" }
csv-keys = { path = "csv-keys" }
csv-store = { path = "csv-store" }
csv-p2p = { path = "csv-p2p" }
csv-observability = { path = "csv-observability" }

# Explorer
csv-explorer-shared = { path = "csv-explorer/shared" }
csv-explorer-storage = { path = "csv-explorer/storage" }
csv-explorer-api = { path = "csv-explorer/api" }
csv-explorer-indexer = { path = "csv-explorer/indexer" }

# Other
csv-stark = { path = "csv-stark" }
csv-mcp-server = { path = "csv-mcp-server" }

# Crypto & security
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
aes-gcm = "0.10"
scrypt = { version = "0.11", default-features = false }
bip39 = { version = "2.0", features = ["rand"] }
zeroize = { version = "1.7", features = ["derive"] }

# Web & WASM
web-sys = { version = "0.3", features = ["Storage", "Window"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = "0.2"
dioxus = "0.5"
dioxus-web = "0.5"
dioxus-desktop = "0.5"

# csv-explorer dependencies
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
async-trait = "0.1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
lazy_static = "1.4"
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
sha3 = "0.10"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
config = "0.14"

[workspace.lints.rust]
missing_docs = "warn"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"

[workspace.lints.clippy]
needless_borrows_for_generic_args = "allow"