[package]
name = "csv-adapter-aptos"
version = "0.1.1"
edition = "2021"
description = "Aptos adapter for CSV (Client-Side Validation) with resource-based seals"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi, Qwen3"]
repository = "https://github.com/zorvan/csv-adapter"
homepage = "https://github.com/zorvan/csv-adapter"
documentation = "https://docs.rs/csv-adapter-aptos"
readme = "README.md"
keywords = ["aptos", "blockchain", "cryptography", "csv-validation", "move"]
categories = ["cryptography::cryptocurrencies"]
publish = true
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
csv-adapter-core = { version = "0.1", path = "../csv-adapter-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }

# Real RPC dependencies (optional, enabled with --features rpc)
aptos-sdk = { version = "0.4", optional = true }
tokio = { version = "1", features = ["rt", "time"], optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }

[features]
default = []
# Enables real RPC client (aptos-sdk, real RPC calls)
rpc = ["aptos-sdk", "tokio", "reqwest"]
aptos-sdk = ["dep:aptos-sdk"]

[dev-dependencies]
rand = "0.8"
tempfile = "3"
