[package]
name = "csv-adapter-aptos"
version = "0.4.0"
edition = "2021"
description = "Aptos adapter for CSV (Client-Side Validation) with resource-based seals"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]
repository = "https://github.com/client-side-validation/csv-adapter"
homepage = "https://github.com/client-side-validation/csv-adapter"
documentation = "https://docs.rs/csv-adapter-aptos"
readme = "README.md"
keywords = ["aptos", "blockchain", "cryptography", "csv-validation", "move"]
categories = ["cryptography::cryptocurrencies"]
publish = true
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
csv-adapter-core = { version = "0.4.0", path = "../csv-adapter-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4.3"
sha2 = "0.10"
sha3 = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
base64 = "0.22"

# Native Aptos SDK (required per Phase 3)
aptos-sdk = "0.4"
aptos-bcs = "0.1"

# Async runtime
async-trait.workspace = true

# HTTP client for RPC (optional real RPC feature)
tokio = { version = "1", features = ["rt", "time"], optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
rand = "0.8"

[features]
default = []
# Enables real RPC client (HTTP client for network calls)
rpc = ["tokio", "reqwest"]
# Enables aptos-sdk integration
aptos-sdk = []

[dev-dependencies]
rand = "0.8"
tempfile = "3"
