[package]
name = "csv-adapter-bitcoin"
version = "0.1.0"
edition = "2021"
description = "Bitcoin adapter for CSV (Client-Side Validation) with UTXO seals and SPV proofs"
license = "MIT"

[dependencies]
csv-adapter-core = { path = "../csv-adapter-core" }
csv-adapter-store = { path = "../csv-adapter-store", optional = true }
bitcoin = { version = "0.30", features = ["serde", "rand", "bitcoinconsensus"] }
bitcoin_hashes = "0.12"
bitcoincore-rpc = { version = "0.17", optional = true }
secp256k1 = { version = "0.27", features = ["rand-std", "global-context"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
bip32 = { version = "0.5", features = ["std", "mnemonic"] }
serde_json = "1.0"
log = "0.4"

[features]
default = []
rpc = ["bitcoincore-rpc", "csv-adapter-store"]
production = ["rpc"]

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
bitcoin_hashes = "0.12"
serde_json = "1.0"