[package]
name = "csv-adapter-bitcoin"
version = "0.4.0"
edition = "2021"
description = "Bitcoin adapter for CSV (Client-Side Validation) with UTXO seals and SPV proofs"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]
repository = "https://github.com/client-side-validation/csv-adapter"
homepage = "https://github.com/client-side-validation/csv-adapter"
documentation = "https://docs.rs/csv-adapter-bitcoin"
readme = "README.md"
keywords = ["bitcoin", "blockchain", "cryptography", "csv-validation", "utxo"]
categories = ["cryptography::cryptocurrencies"]
publish = true
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
csv-adapter-core = { version = "0.4.0", path = "../csv-adapter-core" }
csv-adapter-store = { version = "0.4.0", path = "../csv-adapter-store", optional = true }
async-trait.workspace = true
bitcoin = { version = "0.32", features = ["serde", "rand", "bitcoinconsensus"] }
bitcoin_hashes = "0.14"
bitcoincore-rpc = { version = "0.19", optional = true }
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
hex = "0.4.3"
sha2 = "0.10"
rand = "0.8"
bip32 = { version = "0.5", features = ["std", "mnemonic"] }
serde_json = "1.0"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }

[features]
default = []
rpc = ["bitcoincore-rpc", "csv-adapter-store"]
signet-rest = ["reqwest", "csv-adapter-store"]
production = ["rpc"]

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
bitcoin_hashes = "0.12"
serde_json = "1.0"

[[example]]
name = "signet_real_tx_demo"
required-features = ["signet-rest"]

[[example]]
name = "signet_funding_addr"
required-features = ["signet-rest"]

[[example]]
name = "signet_fixed_seed"
required-features = ["signet-rest"]