[package]
name = "csv-adapter-core"
version = "0.1.0"
edition = "2021"
description = "Chain-agnostic core traits and types for CSV (Client-Side Validation) adapters"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
bincode = "1.3"
sha2 = { version = "0.10", default-features = false }
thiserror = "1.0"
hex = { version = "0.4", default-features = false, features = ["serde"] }
bitcoin = { version = "0.30", optional = true }
secp256k1 = { version = "0.28", features = ["rand-std"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }

[features]
default = ["std"]
std = ["serde/std", "sha2/std", "hex/std"]
tapret = ["bitcoin"]

[dev-dependencies]
secp256k1 = { version = "0.27", features = ["rand-std"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
