[package]
name = "csv-adapter-core"
version = "0.3.0"
edition = "2021"
description = "Chain-agnostic core traits and types for CSV (Client-Side Validation) adapters"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi, Qwen3"]
repository = "https://github.com/zorvan/csv-adapter"
homepage = "https://github.com/zorvan/csv-adapter"
documentation = "https://docs.rs/csv-adapter-core"
readme = "README.md"
keywords = ["blockchain", "cryptography", "csv-validation", "cross-chain", "smart-contracts"]
categories = ["cryptography::cryptocurrencies", "authentication"]
publish = true
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }
toml = { version = "0.8", default-features = false, features = ["parse"], optional = true }
bincode = "1.3"
sha2 = { version = "0.10", default-features = false }
thiserror = "1.0"
hex = { version = "0.4", default-features = false, features = ["serde"] }
async-trait = "0.1"
bitcoin = { version = "0.30", optional = true }
secp256k1 = { version = "0.28", features = ["rand-std"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
bloomfilter = { version = "3.0", default-features = false }

[features]
default = ["std"]
std = ["serde/std", "serde_json/std", "dep:toml", "sha2/std", "hex/std"]
tapret = ["bitcoin"]
# Chain features
ethereum = []
sui = []
aptos = []
solana = []
# Experimental features that may change or be removed without notice.
# Includes: MPC tree, deterministic VM, RGB compatibility.
experimental = []

[dev-dependencies]
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
proptest = "1.4"
tempfile = "3.8"

[[example]]
name = "basic_right"
path = "examples/basic_right.rs"

[[example]]
name = "commitment_chain"
path = "examples/commitment_chain.rs"
