[package]
name = "csv-adapter-ethereum"
version = "0.1.0"
edition = "2021"
description = "Ethereum adapter for CSV (Client-Side Validation) with storage slot seals and light-client proofs"
license = "MIT"

[dependencies]
csv-adapter-core = { path = "../csv-adapter-core" }
csv-adapter-store = { path = "../csv-adapter-store", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
secp256k1 = { version = "0.28", features = ["global-context", "rand-std"] }
log = "0.4"

# Official Ethereum implementations for maximum compatibility
alloy = { version = "0.9", features = ["full"], optional = true }
alloy-sol-types = { version = "0.8", optional = true }
alloy-contract = { version = "0.5", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"], optional = true }
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
url = { version = "2.5", optional = true }
serde_json = "1.0"

[features]
default = []
rpc = ["alloy", "alloy-sol-types", "alloy-contract", "tokio", "csv-adapter-store", "reqwest", "url"]
production = ["rpc"]

[dev-dependencies]
rand = "0.8"
