[package]
name = "csv-adapter-keystore"
version = "0.3.0"
edition = "2021"
description = "Secure key storage for CSV Adapter with BIP-39/BIP-44 support"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi, Qwen3"]
repository = "https://github.com/zorvan/csv-adapter"
homepage = "https://github.com/zorvan/csv-adapter"
documentation = "https://docs.rs/csv-adapter-keystore"
readme = "README.md"
keywords = ["keystore", "bip39", "bip44", "crypto", "wallet"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
publish = true
rust-version = "1.75"

[dependencies]
csv-adapter-core = { version = "0.3.0", path = "../csv-adapter-core" }

# BIP-39 mnemonic support
bip39 = { version = "2.0", features = ["rand", "zeroize"] }

# BIP-32/BIP-44 HD wallet derivation
tiny-bip39 = { version = "1.0", optional = true }
bip32 = { version = "0.5", features = ["secp256k1-ffi", "alloc"], optional = true }

# Encryption
aes-gcm = "0.10"
aes = "0.8"
cipher = "0.4"
ctr = "0.9"

# KDF (Key Derivation)
scrypt = { version = "0.11", default-features = false }
argon2 = { version = "0.5", optional = true }

# Memory safety
zeroize = { version = "1.7", features = ["derive", "alloc", "zeroize_derive"] }

# Random number generation
rand = { version = "0.8", features = ["std", "std_rng"] }
getrandom = { version = "0.2", features = ["js"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Cryptographic primitives
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", default-features = false }

# Secp256k1 for Bitcoin/Ethereum
secp256k1 = { version = "0.28", features = ["global-context", "rand-std"], optional = true }

# Ed25519 for Sui/Aptos/Solana
ed25519-dalek = { version = "2.0", features = ["rand_core"], optional = true }

# Error handling
thiserror = "1.0"

[features]
default = ["bip39-full", "bip44", "secp256k1"]
bip39-full = ["bip39", "tiny-bip39"]
bip44 = ["bip32", "secp256k1", "ed25519-dalek"]
secp256k1 = ["dep:secp256k1"]
ed25519 = ["ed25519-dalek"]
wasm = ["getrandom/js", "argon2"]
production = ["argon2"]

[dev-dependencies]
tempfile = "3.9"
