[package]
name = "csv-adapter-solana"
version = "0.3.0"
edition = "2021"
description = "Solana adapter for CSV (Client-Side Validation) with account seals and program-based commitments"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi, Qwen3"]
repository = "https://github.com/zorvan/csv-adapter"
homepage = "https://github.com/zorvan/csv-adapter"
documentation = "https://docs.rs/csv-adapter-solana"
readme = "README.md"
keywords = ["solana", "blockchain", "cryptography", "csv-validation", "account"]
categories = ["cryptography::cryptocurrencies"]
publish = true
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
csv-adapter-core = { version = "0.3.0", path = "../csv-adapter-core" }
csv-adapter-store = { version = "0.3.0", path = "../csv-adapter-store", optional = true }
solana-sdk = "4.0.1"
solana-rpc-client = "4.0.0-beta.7"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4.3"
sha2 = "0.10"
bs58 = "0.5"
ed25519-dalek = "2.0"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = []
rpc = ["reqwest", "csv-adapter-store"]
mainnet = []
devnet = []
testnet = []

[dev-dependencies]
tokio-test = "0.4"
serde_json = "1.0"
