[package]
name = "csv-adapter-solana"
version = "0.4.0"
edition = "2021"
description = "Solana adapter for CSV (Client-Side Validation) with account seals and program-based commitments"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]
repository = "https://github.com/client-side-validation/csv-adapter"
homepage = "https://github.com/client-side-validation/csv-adapter"
documentation = "https://docs.rs/csv-adapter-solana"
readme = "README.md"
keywords = ["solana", "blockchain", "cryptography", "csv-validation", "account"]
categories = ["cryptography::cryptocurrencies"]
publish = true
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
csv-adapter-core = { version = "0.4.0", path = "../csv-adapter-core" }
csv-adapter-store = { version = "0.4.0", path = "../csv-adapter-store", optional = true }
solana-sdk = "2.2.0"
solana-program = "2.2.0"
solana-rpc-client = "2.2.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4.3"
sha2 = "0.10"
bs58 = "0.5"
ed25519-dalek = "2.0"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
bincode = "1.3"
base64 = "0.22"

[features]
default = []
rpc = ["csv-adapter-store"]
mainnet = []
devnet = []
testnet = []

[dev-dependencies]
tokio-test = "0.4"
serde_json = "1.0"
