[package]
name = "csv-adapter-store"
version = "0.3.0"
edition = "2021"
description = "SQLite persistence layer for CSV Adapter seal and anchor storage"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi, Qwen3"]
repository = "https://github.com/zorvan/csv-adapter"
homepage = "https://github.com/zorvan/csv-adapter"
documentation = "https://docs.rs/csv-adapter-store"
readme = "README.md"
keywords = ["sqlite", "persistence", "blockchain", "csv-validation", "storage"]
categories = ["database", "cryptography::cryptocurrencies"]
publish = true
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
csv-adapter-core = { version = "0.3.0", path = "../csv-adapter-core" }
rusqlite = { version = "0.30", features = ["bundled"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = { version = "5.0", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[features]
default = ["file-storage"]
file-storage = ["dep:dirs"]
clap = ["dep:clap"]
