[package]
name = "csv-adapter-store"
version = "0.4.0"
edition = "2021"
description = "SQLite persistence layer for CSV Adapter seal and anchor storage"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]
repository = "https://github.com/client-side-validation/csv-adapter"
homepage = "https://github.com/client-side-validation/csv-adapter"
documentation = "https://docs.rs/csv-adapter-store"
readme = "README.md"
keywords = ["sqlite", "persistence", "blockchain", "csv-validation", "storage"]
categories = ["database", "cryptography::cryptocurrencies"]
publish = true
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
csv-adapter-core = { version = "0.4.0", path = "../csv-adapter-core" }
rusqlite = { version = "0.30", features = ["bundled"], optional = true }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = { version = "5.0", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

# Browser storage dependencies
web-sys = { version = "0.3", features = ["Storage", "Window"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = ["sqlite", "file-storage"]
sqlite = ["dep:rusqlite"]
file-storage = ["dep:dirs"]
clap = ["dep:clap"]
browser-storage = ["dep:web-sys", "dep:wasm-bindgen"]
