[package]
name = "csv-adapter-sui"
version = "0.4.0"
edition = "2021"
description = "Sui adapter for CSV (Client-Side Validation) with object-based seals"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]
repository = "https://github.com/client-side-validation/csv-adapter"
homepage = "https://github.com/client-side-validation/csv-adapter"
documentation = "https://docs.rs/csv-adapter-sui"
readme = "README.md"
keywords = ["sui", "blockchain", "cryptography", "csv-validation", "objects"]
categories = ["cryptography::cryptocurrencies"]
publish = true
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
csv-adapter-core = { version = "0.4.0", path = "../csv-adapter-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4.3"
sha2 = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }

# Real RPC dependencies (optional, enabled with --features rpc)
# Note: Uses direct JSON-RPC over HTTP, not sui-sdk
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
tokio = { version = "1", features = ["rt", "time"], optional = true }
base64 = { version = "0.22", optional = true }

# Sui SDK for contract deployment (optional)
# Temporarily commented out due to core2 dependency issue
# sui-sdk = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.70.2", optional = true }
# sui-keys = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.70.2", optional = true }
# shared-crypto = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.70.2", optional = true }
bcs = { version = "0.1", optional = true }
async-trait.workspace = true
rand = "0.8"

[features]
default = []
# Enables real RPC client (real JSON-RPC calls over HTTP)
rpc = ["reqwest", "tokio", "base64"]
# Enables Sui SDK for contract deployment (temporarily disabled due to core2 dependency issue)
# sui-sdk-deploy = ["sui-sdk", "sui-keys", "shared-crypto", "bcs", "tokio"]

[dev-dependencies]
rand = "0.8"
tempfile = "3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
